--- a/packages/Docker/nginx.conf
+++ b/packages/Docker/nginx.conf
@@ -40,35 +40,11 @@ http {
 	# instead of using partial frames. Default is 'off'.
 	tcp_nopush on;
 
-
-	# Enables the specified protocols. Default is TLSv1 TLSv1.1 TLSv1.2.
-	# TIP: If you're not obligated to support ancient clients, remove TLSv1.1.
-	ssl_protocols TLSv1.1 TLSv1.2 TLSv1.3;
-
-	# Specifies that our cipher suits should be preferred over client ciphers.
-	# Default is 'off'.
-	ssl_prefer_server_ciphers on;
-
-	# Enables a shared SSL cache with size that can hold around 8000 sessions.
-	# Default is 'none'.
-	ssl_session_cache shared:SSL:2m;
-
-	# Specifies a time during which a client may reuse the session parameters.
-	# Default is '5m'.
-	ssl_session_timeout 1h;
-
-	# Disable TLS session tickets (they are insecure). Default is 'on'.
-	ssl_session_tickets off;
-
-	# Set the Vary HTTP header as defined in the RFC 2616. Default is 'off'.
-	gzip_vary on;
-
-
 	# Helper variable for proxying websockets.
-	map $http_upgrade $connection_upgrade {
-		default upgrade;
-		'' close;
-	}
+#	map $http_upgrade $connection_upgrade {
+#		default upgrade;
+#		'' close;
+#	}
 
 	# Specifies the main log format.
 	log_format main '$remote_addr - $remote_user [$time_local] "$request" '
@@ -82,10 +58,14 @@ http {
 		listen 8080 default_server;
 		listen [::]:8080 default_server;
 
-		location ~ / {
-			include fastcgi_params;
+		index index.html;
+		root /app/html;
+
+		location /nfquery.cgi {
+			include /etc/nginx/fastcgi_params;
 			fastcgi_pass 127.0.0.1:9000;
-			fastcgi_param SCRIPT_FILENAME $docuemnt_root$fastcgi_script_name;
+			fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+			fastcgi_param SCRIPT_NAME nfquery.cgi;
 		}
 	}
 }
