change the nfcapd user example

--- a/packages/Docker/env.example
+++ b/packages/Docker/env.example
@@ -1,5 +1,6 @@
 # env example
-#NFCAPD_USER=root
+#NFCAPD_ENABLE=yes
+#NFCAPD_USER=nginx
 #NFCAPD_GROUP=ngninx
 #NFCAPD_LISTEN=9995
 #NFCAPD_BUFSIZE=200000
