added addtional files

--- a/packages/Docker/Dockerfile
+++ b/packages/Docker/Dockerfile
@@ -25,8 +25,13 @@ mv package/dist/dygraph.* /app/html/
 rm -rf /app/package
 EOF
 COPY nginx.conf nginx.conf.dist
-COPY index.html html/index.html
 COPY nfquery.env nfquery.env.dist
+COPY index.html html/index.html
+COPY addr.js html/addr.js
+COPY flows.js html/flows.js
+COPY graphs.js html/graphs.js
+COPY flow_sort.js html/flow_sort.js
+COPY ui.js html/ui.js
 COPY --chmod=755 nfquery.cgi html/nfquery.cgi
 COPY --chmod=755 entrypoint.sh entrypoint.sh
 
