updated with possible args and examples

--- a/nfquery.env
+++ b/nfquery.env
@@ -1,3 +1,7 @@
 # Example nfquery env
 #
-FLOW_DIR="/app/flow-data"
+#FLOW_DIR="/var/db/flows"
+#LOGFILE="/logs/nfquery.log"
+# DANGER: only specify if you want to override the default list of args
+#OUTPUT_FMT="csv:%trr,%td,%ra,%pr,%sa,%sp,%da,%dp,%it,%ic,%pkt,%byt,%pps,%bps,%flg,%tos"
+
